--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "obiefy/api-response": "^0.9.7",
         "realrashid/sweet-alert": "^4.0"
     },
     "require-dev": {
