--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "league/oauth2-client": "^2.6",
         "obiefy/api-response": "^0.9.7",
+        "phpmailer/phpmailer": "^6.5",
         "realrashid/sweet-alert": "^4.0"
     },
     "require-dev": {
