--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FACEBOOK_CLIENT_ID="4393886707390578"
+FACEBOOK_CLIENT_SECRET="ecaf70ff318a15a794cd0e1f727442f0"
