Working on social login

--- a/.env.example
+++ b/.env.example
@@ -52,4 +52,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FACEBOOK_CLIENT_ID="4393886707390578"
 FACEBOOK_CLIENT_SECRET="ecaf70ff318a15a794cd0e1f727442f0"
-FACEBOOK_CALLBACK_ENDPOINT="api/callback/facebook"
+FACEBOOK_CALLBACK_ENDPOINT="/api/V1/callback/facebook"
