--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "league/oauth2-client": "^2.6",
         "obiefy/api-response": "^0.9.7",
         "phpmailer/phpmailer": "^6.5",
+        "rachidlaasri/laravel-installer": "^4.1",
         "realrashid/sweet-alert": "^4.0"
     },
     "require-dev": {
