--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "grimzy/laravel-mysql-spatial": "5.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7",
+        "laravel-notification-channels/fcm": "~2.0",
         "laravel/cashier": "^13.5",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
