Paypal paymetn method integrated

--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,10 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 FACEBOOK_CLIENT_ID="4393886707390578"
 FACEBOOK_CLIENT_SECRET="ecaf70ff318a15a794cd0e1f727442f0"
 FACEBOOK_CALLBACK_ENDPOINT="/api/V1/callback/facebook"
+
+FIREBASE_CREDENTIALS="grocery-app-332911-firebase-adminsdk-8zx72-f7f435844e.json"
+FIREBASE_DATABASE_URL="https://grocery-app-332911-default-rtdb.asia-southeast1.firebasedatabase.app"
+
+PAYPAL_CLIENT_ID="AVIIgvDmILdmD6srsZnVg9I_p2Kbc9bZKjDoRZxF-96yMDYvHWNKsMPZVWDq3I07_wsOHUrBlUVP5h2e"
+PAYPAL_SECRET="EHIiz36bB417pprXGJikorhvdF-yWpu4nmx7TZDI61qy9-hpo8028ZasmcV05maQTbNc0G7wyro-95B9"
+PAYPAL_MODE=sandbox
