--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,11 @@
         "laravel/ui": "^3.3",
         "league/oauth2-client": "^2.6",
         "obiefy/api-response": "^0.9.7",
+        "paypal/rest-api-sdk-php": "^1.14",
         "phpmailer/phpmailer": "^6.5",
         "rachidlaasri/laravel-installer": "^4.1",
-        "realrashid/sweet-alert": "^4.0"
+        "realrashid/sweet-alert": "^4.0",
+        "srmklive/paypal": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
