--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7",
         "laravel-notification-channels/fcm": "~2.0",
-        "laravel/cashier": "^13.5",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2",
@@ -23,7 +22,8 @@
         "phpmailer/phpmailer": "^6.5",
         "rachidlaasri/laravel-installer": "^4.1",
         "realrashid/sweet-alert": "^4.0",
-        "srmklive/paypal": "^3.0"
+        "srmklive/paypal": "^3.0",
+        "stripe/stripe-php": "^7.107"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
