Frontend | Backend Social login done.

--- a/.env.example
+++ b/.env.example
@@ -50,9 +50,13 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-FACEBOOK_CLIENT_ID="4393886707390578"
-FACEBOOK_CLIENT_SECRET="ecaf70ff318a15a794cd0e1f727442f0"
-FACEBOOK_CALLBACK_ENDPOINT="/api/V1/callback/facebook"
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_ENDPOINT=
+
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_CALLBACK_ENDPOINT=
 
 FIREBASE_CREDENTIALS="grocery-app-332911-firebase-adminsdk-8zx72-f7f435844e.json"
 FIREBASE_DATABASE_URL="https://grocery-app-332911-default-rtdb.asia-southeast1.firebasedatabase.app"
